--- a/src/WRA.Umbraco.Web/Views/UmbracoTestform1.cshtml
+++ b/src/WRA.Umbraco.Web/Views/UmbracoTestform1.cshtml
@@ -1,1 +1,2 @@
 ﻿
+            @await Umbraco.RenderMacroAsync("renderUmbracoForm", new {FormGuid="3410248b-7daf-48df-8399-c1ee027f363c", FormTheme="", ExcludeScripts="0"})
