--- a/src/WRA.Umbraco.Web/Views/umbracoTestForm.cshtml
+++ b/src/WRA.Umbraco.Web/Views/umbracoTestForm.cshtml
@@ -2,4 +2,5 @@
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 @{
 	Layout = null;
+	@await Umbraco.RenderMacroAsync("renderUmbracoForm", new {FormGuid="3410248b-7daf-48df-8399-c1ee027f363c", FormTheme="", ExcludeScripts="0"})
 }
