Deployment 948f32c9-838d-4f49-a121-9882cfd6707e: Run number 598

--- a/src/WRA.Umbraco.Web/Views/Partials/Forms/Themes/custom/Script.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/Forms/Themes/custom/Script.cshtml
@@ -13,7 +13,7 @@
      data-serialized-page-button-conditions="@JsonConvert.SerializeObject(Model.PageButtonConditions, FormsJsonSerializerSettings.Default)"
      data-serialized-fieldset-conditions="@JsonConvert.SerializeObject(Model.FieldsetConditions, FormsJsonSerializerSettings.Default)"
      data-serialized-field-conditions="@JsonConvert.SerializeObject(Model.FieldConditions, FormsJsonSerializerSettings.Default)"
-     @* data-serialized-fields-not-displayed="@JsonConvert.SerializeObject(Model!.GetFieldsNotDisplayed(), FormsJsonSerializerSettings.Default)" *@
+     data-serialized-fields-not-displayed="@JsonConvert.SerializeObject(Model!.GetFieldsNotDisplayed(), FormsJsonSerializerSettings.Default)"
      data-trigger-conditions-check-on="@Model.TriggerConditionsCheckOn"
      data-form-element-html-id-prefix="@Model.FormElementHtmlIdPrefix"></div>
 
