--- a/src/WRA.Umbraco.Web/Views/MultiVariantProductPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultiVariantProductPage.cshtml
@@ -15,9 +15,9 @@
     var parentPages = Model.Ancestors().Reverse();
 
     var startDate = @String.Format("{0:MMMM d}", Model.StartDate) ?? string.Empty;
-    var startTime = @String.Format("{0:HH:mm}", Model.StartDate) ?? string.Empty;
+    var startTime = @String.Format("{0:h:mm tt}", Model.StartDate) ?? string.Empty;
     var endDate = @String.Format("{0:MMMM d}", Model.EndDate) ?? string.Empty;
-    var endTime = @String.Format("{0:HH:mm}", Model.EndDate) ?? string.Empty;
+    var endTime = @String.Format("{0:h:mm tt}", Model.EndDate) ?? string.Empty;
 
     //This template used for Courses, Event, Product detail
 }
@@ -116,7 +116,7 @@
             {
                 <h1 class="h3 mb-4">@Model.Name</h1>
                 RenderVariants(store, Model, addedProductReference);
-                <button id="add-to-cart" class="btn btn-primary mb-6" type="submit">Add to Cart</button>
+                <button id="add-to-cart" class="btn btn-primary mt-4 mb-6" type="submit">Add to Cart</button>
             }
 
             @if (!String.IsNullOrEmpty(Model.LongDescription.ToString()))
