--- a/src/WRA.Umbraco.Web/Views/MultiVariantProductPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultiVariantProductPage.cshtml
@@ -116,7 +116,8 @@
             {
                 <h1 class="h3 mb-4">@Model.Name</h1>
                 RenderVariants(store, Model, addedProductReference);
-                <button id="add-to-cart" class="btn btn-primary mt-4 mb-6" type="submit">Add to Cart</button>
+
+                <button id="add-to-cart" class="btn btn-primary mt-4 mb-6" type="submit">@(productType != "Products" ? "Register" : "Add to Card")</button>
             }
 
             @if (!String.IsNullOrEmpty(Model.LongDescription.ToString()))
