Deployment 27ce5603-b9de-466d-ba7f-5958a4db8f54: Run number 606

--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -39,12 +39,12 @@
                             if (parentPage.ContentType.Alias == "magazineCollection" && parentPage.Children.FirstOrDefault() != null)
                             {
                                 <li>
-                                    <a href="@parentPage.Children.FirstOrDefault().Url()" title="Go to first issue of @parentPage.Name">@parentPage.Name</a>
+                                    <a href="@parentPage?.Children?.FirstOrDefault().Url()" title="Go to first issue of @parentPage?.Name">@parentPage.Name</a>
                                 </li>
                             } else
                             {
                                 <li>
-                                    <a href="@parentPage.Url()">@parentPage.Name</a>
+                                    <a href="@parentPage?.Url()">@parentPage?.Name</a>
                                 </li>
                             }
                         }
@@ -60,7 +60,7 @@
         <h1 class="h1 mb-5">@content.Name</h1>
         <div class="row">
             <div class="col-lg-4 d-flex flex-column align-items-center pb-6 pb-lg-0">
-                <img src="@imageCurrent.GetCropUrl(width: 320, height: 412, furtherOptions: "&format=WebP")" srcset="@imageCurrent.GetCropUrl(width: 640, height: 824, furtherOptions: "&format=WebP") 2x" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent.Value("altText") ?? "")" />
+                <img src="@imageCurrent?.GetCropUrl(width: 320, height: 412, furtherOptions: "&format=WebP")" srcset="@imageCurrent?.GetCropUrl(width: 640, height: 824, furtherOptions: "&format=WebP") 2x" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent?.Value("altText"))" />
                 <a href="@content.Pdf" target="_blank" class="btn btn-primary">Download PDF</a>
             </div>
             <div class="col-lg-8">
