--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_breadcrumbs.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_breadcrumbs.scss
@@ -2,17 +2,19 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    font-size: 0.75rem;
+    font-size: 0.875rem;
+    letter-spacing: 0.015rem;
 
     li {
         display: inline-block;
-        padding-right: 3px;
+        padding-right: 4px;
 
         &:not(:last-child) {
             &::after {
                 content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M5.25 10.5L8.75 7L5.25 3.5' stroke='%23050F1E' stroke-width='1.05' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
                 display: inline-block;
                 vertical-align: text-top;
+                padding-left: 4px;
             }
         }
 
@@ -23,5 +25,24 @@
 
     a {
         color: currentColor;
+    }
+
+    &--light {
+        color: #FFFFFF;
+
+        li {
+            display: inline-block;
+            padding-right: 4px;
+
+            &:not(:last-child) {
+                &::after {
+                    content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M5.25 10.5L8.75 7L5.25 3.5' stroke='%23FFFFFF' stroke-width='1.05' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+                }
+            }
+
+            span {
+                color: $gray-20;
+            }
+        }
     }
 }
