--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
@@ -98,6 +98,10 @@
     &-secondary {
         padding: 1rem 1rem;
 
+        &.btn-sm {
+            padding: 0.5rem 1rem;
+        }
+
         &:where(:not(.btn-light)) {
             color: $btn-color;
 
