--- a/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
@@ -27,7 +27,7 @@
 
 <div class="text-bg-secondary">
     <div class="py-5">
-        @await Html.PartialAsync("_breadcrumbsProducts", new ViewDataDictionary(this.ViewData) { { "CssClass", "breadcrumbs--light" }, { "ParentName", "Education" }, { "ParentUrl", "/education" } })
+        @await Html.PartialAsync("_breadcrumbsProducts", new ViewDataDictionary(this.ViewData) { { "CssClass", "breadcrumbs--light" } })
     </div>
 </div>
 
