--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -32,6 +32,7 @@
 @import 'components/loaders';
 @import 'components/pagination';
 @import 'components/quantity-selector';
+@import 'components/modal';
 
 @import 'blocks/feature-breaker';
 @import 'blocks/layouts';
