--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_card.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_card.scss
@@ -388,11 +388,16 @@
 .col-bundle {
 
     .card-bundle.card {
-        padding: 1.75rem;
+        padding: 1rem;
         background-color: $gray-10;
         border: solid 1.5px $gray-10;
         transition: all 150ms ease 0s;
         box-shadow: none;
+        position: initial;
+
+        @include media-breakpoint-up(md) {
+            padding: 1.75rem;
+        }
     }
 
     .btn__deselect {
@@ -407,10 +412,11 @@
             + .card-bundle {
                 background-color: $blue-light;
                 border: solid 1.5px $blue-dark;
-                
+
                 .btn__select {
                     display: none;
                 }
+
                 .btn__deselect {
                     display: inline;
                 }
