Deployment ccd462ea-136f-4758-af0f-524501f068a6: Run number 615

--- a/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
+++ b/src/WRA.Umbraco.Web/Views/BasicContent.cshtml
@@ -34,8 +34,8 @@
         @Html.Raw(Model.Value("scripts"));
     }
 }
-@if(MemberCanViewPage){
-    <h1> Can't see this unless you're logged in or this page is available to everyone!</h1>
+@if (MemberCanViewPage) {
+    @* gated page popup to do *@
 }
 
 @await Html.PartialAsync("blockgrid/default", sections)
