--- a/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MacroPartials/MemberLogin.cshtml
@@ -1,6 +1,4 @@
 ﻿@inherits Umbraco.Cms.Web.Common.Macros.PartialViewMacroPage
-
-
 @using Umbraco.Cms.Web.Common.Models
 @using Umbraco.Cms.Web.Common.Security
 @using Umbraco.Cms.Web.Website.Controllers
@@ -8,6 +6,7 @@
 @using Umbraco.Extensions
 @inject IMemberExternalLoginProviders memberExternalLoginProviders
 @inject ITwoFactorLoginService twoFactorLoginService
+
 @{
     var loginModel = new LoginModel();
     // You can modify this to redirect to a different URL instead of the current one
@@ -18,10 +17,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
 
-
 @if (ViewData.TryGetTwoFactorProviderNames(out var providerNames))
 {
-
     foreach (var providerName in providerNames)
     {
         <div class="2fa-form">
@@ -29,7 +26,6 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             @using (Html.BeginUmbracoForm<UmbTwoFactorLoginController>(nameof(UmbTwoFactorLoginController.Verify2FACode)))
             {
-
                 <text>
                     <input type="hidden" name="provider" value="@providerName"/>
                     Input security code: <input name="code" value=""/><br/>
@@ -39,70 +35,68 @@
             }
         </div>
     }
-
 }
 else
 {
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-5">
+            @using (Html.BeginUmbracoForm<UmbLoginController>("HandleLogin", new { RedirectUrl = loginModel.RedirectUrl })) {
+                <h1>Log In</h1>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="mb-3">
+                    <label asp-for="@loginModel.Username" class="form-label"></label>
+                    <input asp-for="@loginModel.Username" class="form-control" />
+                    <span asp-validation-for="@loginModel.Username" class="form-text text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="@loginModel.Password" class="form-label"></label>
+                    <input asp-for="@loginModel.Password" class="form-control" />
+                    <span asp-validation-for="@loginModel.Password" class="form-text text-danger"></span>
+                </div>
+                @*<div class="mb-3 form-check">
+                    <input asp-for="@loginModel.RememberMe" class="form-check-input">
+                    <label asp-for="@loginModel.RememberMe" class="form-check-label">
+                        @Html.DisplayNameFor(m => loginModel.RememberMe)
+                    </label>
+                </div>*@
+                <button type="submit" class="btn btn-primary">Login</button>
+                <div class="d-flex mt-3 fs-sm">
+                    <a href="#">Create Account</a>
+                    <a class="ms-3 ps-3 border-start" href="#">Reset Password</a>
+                    <a class="ms-3 ps-3 border-start" href="#">Help</a>
+                </div>
+            }
+        </div>
 
+        @{
+            var loginProviders = await memberExternalLoginProviders.GetMemberProvidersAsync();
+            var externalSignInError = ViewData.GetExternalSignInProviderErrors();
 
-<div class="login-form">
-
-    @using (Html.BeginUmbracoForm<UmbLoginController>(
-        "HandleLogin", new { RedirectUrl = loginModel.RedirectUrl })) {
-
-            <h4>Log in with a local account.</h4>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3">
-                <label asp-for="@loginModel.Username" class="form-label"></label>
-                <input asp-for="@loginModel.Username" class="form-control" />
-                <span asp-validation-for="@loginModel.Username" class="form-text text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="@loginModel.Password" class="form-label"></label>
-                <input asp-for="@loginModel.Password" class="form-control" />
-                <span asp-validation-for="@loginModel.Password" class="form-text text-danger"></span>
-            </div>
-            <div class="mb-3 form-check">
-                <input asp-for="@loginModel.RememberMe" class="form-check-input">
-                <label asp-for="@loginModel.RememberMe" class="form-check-label">
-                    @Html.DisplayNameFor(m => loginModel.RememberMe)
-                </label>
-            </div>
-
-            <button type="submit" class="btn btn-primary">Log in</button>
-
-
-        }
-@{
-    var loginProviders = await memberExternalLoginProviders.GetMemberProvidersAsync();
-    var externalSignInError = ViewData.GetExternalSignInProviderErrors();
-
-    if (loginProviders.Any())
-    {
-        <hr/>
-        <h4>Or using external providers</h4>
-        if (externalSignInError?.AuthenticationType is null && externalSignInError?.Errors.Any() == true)
-        {
-            @Html.DisplayFor(x => externalSignInError.Errors);
-        }
-
-        @foreach (var login in await memberExternalLoginProviders.GetMemberProvidersAsync())
-        {
-
-            @using (Html.BeginUmbracoForm<UmbExternalLoginController>(nameof(UmbExternalLoginController.ExternalLogin)))
+            if (loginProviders.Any())
             {
-                <button type="submit" name="provider" value="@login.ExternalLoginProvider.AuthenticationType">
-                    Sign in with @login.AuthenticationScheme.DisplayName
-                </button>
-
-                if (externalSignInError?.AuthenticationType == login.ExternalLoginProvider.AuthenticationType)
+                <hr/>
+                <h4>Or using external providers</h4>
+                if (externalSignInError?.AuthenticationType is null && externalSignInError?.Errors.Any() == true)
                 {
                     @Html.DisplayFor(x => externalSignInError.Errors);
                 }
+
+                @foreach (var login in await memberExternalLoginProviders.GetMemberProvidersAsync())
+                {
+
+                    @using (Html.BeginUmbracoForm<UmbExternalLoginController>(nameof(UmbExternalLoginController.ExternalLogin)))
+                    {
+                        <button type="submit" name="provider" value="@login.ExternalLoginProvider.AuthenticationType">
+                            Sign in with @login.AuthenticationScheme.DisplayName
+                        </button>
+
+                        if (externalSignInError?.AuthenticationType == login.ExternalLoginProvider.AuthenticationType)
+                        {
+                            @Html.DisplayFor(x => externalSignInError.Errors);
+                        }
+                    }
+                }
             }
         }
-    }
-}
-</div>
+    </div>
 }
