--- a/src/WRA.Umbraco.Web/Views/MacroPartials/MemberRegistration.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MacroPartials/MemberRegistration.cshtml
@@ -30,8 +30,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
-<script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
 
 @if (success)
 {
@@ -40,55 +39,54 @@
 }
 else
 {
-    using (Html.BeginUmbracoForm<MemberRegisterController>(
-    "HandleRegisterMember",
-    new
-    {
+    using (Html.BeginUmbracoForm<MemberRegisterController>("HandleRegisterMember", new {
         MemberTypeAlias = registerModel.MemberTypeAlias,
         UsernameIsEmail = registerModel.UsernameIsEmail,
         RedirectUrl = registerModel.RedirectUrl,
         AutomaticLogIn = registerModel.AutomaticLogIn
     }))
     {
-        <h2>Create a new account.</h2>
-        <hr />
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="mb-3">
-            <label asp-for="@registerModel.Name" class="form-label"></label>
-            <input asp-for="@registerModel.Name" class="form-control" aria-required="true" />
-            <span asp-validation-for="@registerModel.Name" class="form-text text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="@registerModel.Email" class="form-label"></label>
-            <input asp-for="@registerModel.Email" class="form-control" autocomplete="username" aria-required="true" />
-            <span asp-validation-for="@registerModel.Email" class="form-text text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="@registerModel.Password" class="form-label"></label>
-            <input asp-for="@registerModel.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-            <span asp-validation-for="@registerModel.Password" class="form-text text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="@registerModel.ConfirmPassword" class="form-label"></label>
-            <input asp-for="@registerModel.ConfirmPassword" class="form-control" autocomplete="new-password"
-                aria-required="true" />
-            <span asp-validation-for="@registerModel.ConfirmPassword" class="form-text text-danger"></span>
-        </div>
-
-        @if (registerModel.MemberProperties != null)
-        {
-            for (var i = 0; i < registerModel.MemberProperties.Count; i++)
-            {
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-5">
+                <h1>Create Account</h1>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="mb-3">
-                    @Html.LabelFor(m => registerModel.MemberProperties[i].Value, registerModel.MemberProperties[i].Name)
-                    <input asp-for="@registerModel.MemberProperties[i].Value" class="form-control" />
-                    @Html.HiddenFor(m => registerModel.MemberProperties[i].Alias)
-                    <span asp-validation-for="@registerModel.MemberProperties[i].Value" class="form-text text-danger"></span>
+                    <label asp-for="@registerModel.Name" class="form-label"></label>
+                    <input asp-for="@registerModel.Name" class="form-control" aria-required="true" />
+                    <span asp-validation-for="@registerModel.Name" class="form-text text-danger"></span>
                 </div>
-            }
-        }
+                <div class="mb-3">
+                    <label asp-for="@registerModel.Email" class="form-label"></label>
+                    <input asp-for="@registerModel.Email" class="form-control" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="@registerModel.Email" class="form-text text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="@registerModel.Password" class="form-label"></label>
+                    <input asp-for="@registerModel.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                    <span asp-validation-for="@registerModel.Password" class="form-text text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="@registerModel.ConfirmPassword" class="form-label"></label>
+                    <input asp-for="@registerModel.ConfirmPassword" class="form-control" autocomplete="new-password"
+                        aria-required="true" />
+                    <span asp-validation-for="@registerModel.ConfirmPassword" class="form-text text-danger"></span>
+                </div>
 
-        <button type="submit" class="btn btn-primary">Register</button>
+                @if (registerModel.MemberProperties != null)
+                {
+                    for (var i = 0; i < registerModel.MemberProperties.Count; i++)
+                    {
+                        <div class="mb-3">
+                            @Html.LabelFor(m => registerModel.MemberProperties[i].Value, registerModel.MemberProperties[i].Name)
+                            <input asp-for="@registerModel.MemberProperties[i].Value" class="form-control" />
+                            @Html.HiddenFor(m => registerModel.MemberProperties[i].Alias)
+                            <span asp-validation-for="@registerModel.MemberProperties[i].Value" class="form-text text-danger"></span>
+                        </div>
+                    }
+                }
 
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </div>
     }
 }
